# ChatGPT_Delavnica

./: CMakeLists.txt  README.md  requirements.txt  water_flow_visualization.cpp  water_flow_visualization.py
docs/: README.md  build_pdf.bat  build_pdf.ps1  build_pdf.py  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report_from_python.py  water_flow_sim.html
docs/svg-inkscape/: flowchart_svg-tex.pdf_tex
